<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localizar_dispositivo_titulo"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"/>

    <TextView
        android:id="@+id/txtInstruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localizar_dispositivo_descripcion"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <TextView
        android:id="@+id/txtIcono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_telefono"
        android:textSize="64sp"
        app:layout_constraintTop_toBottomOf="@id/txtInstruccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>